--- a/index.html
+++ b/index.html
@@ -1,272 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Southern 3Ds</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<style>
-* { margin: 0; padding: 0; box-sizing: border-box; font-family: "Segoe UI", sans-serif; }
-body { background: #0f1220; color: white; transition: filter 0.3s; }
-
-/* LOADER */
-#loader {
-  position: fixed; inset: 0; background: #0f1220;
-  display: flex; justify-content: center; align-items: center; z-index: 9999;
-  transition: opacity 1s;
-}
-.spinner { width: 70px; height: 70px; border: 6px solid #2a2f55; border-top: 6px solid #6c7cff; border-radius: 50%; animation: spin 1s linear infinite; }
-@keyframes spin { to { transform: rotate(360deg); } }
-
-/* HEADER */
-header { padding: 25px; background: linear-gradient(135deg, #6c7cff, #8f6bff); display: flex; justify-content: space-between; align-items: center; }
-header h1 { font-size: 2.3rem; }
-.cart-icon { font-size: 1.8rem; cursor: pointer; position: relative; }
-.cart-count { position: absolute; top: -8px; right: -10px; background: red; border-radius: 50%; padding: 2px 7px; font-size: 0.75rem; }
-
-/* SEARCH */
-.search-box { max-width: 400px; margin: 25px auto; }
-.search-box input { width: 100%; padding: 12px; border-radius: 20px; border: none; }
-
-/* STORE */
-.store { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 25px; padding: 40px; max-width: 1200px; margin: auto; }
-.item { background: #1b1f3b; padding: 20px; border-radius: 15px; }
-.item h3 { margin-bottom: 6px; }
-.price { color: #6c7cff; font-weight: bold; }
-.item button { width: 100%; padding: 10px; border-radius: 20px; border: none; background: #6c7cff; color: white; cursor: pointer; margin-top: 10px; transition: opacity 0.4s, transform 0.4s; }
-.item button.secondary { background: #2a2f55; }
-.item button.added { opacity: 0.6; transform: scale(1.05); }
-
-/* PRODUCT PAGE */
-.page { 
-  position: fixed; inset: 0; background: #0f1220; z-index: 900; display: none; padding: 25px; 
-  overflow-y: auto; /* allows scrolling if content is big */
-}
-.back { cursor: pointer; font-size: 1rem; opacity: 0.8; margin-bottom: 10px; }
-.back:hover { opacity: 1; }
-.page-content { max-width: 700px; margin: auto; }
-
-/* GALLERY */
-.gallery img { width: 100%; border-radius: 15px; }
-.gallery-controls { display: flex; justify-content: space-between; margin-top: 10px; }
-.gallery-controls button { background: #2a2f55; border: none; color: white; padding: 8px 14px; border-radius: 20px; cursor: pointer; }
-
-/* DOTS */
-.dots { display: flex; justify-content: center; gap: 8px; margin-top: 12px; }
-.dot { width: 8px; height: 8px; background: #555; border-radius: 50%; cursor: pointer; transition: transform 0.3s, background 0.3s; }
-.dot.active { background: #6c7cff; transform: scale(1.6); }
-
-/* PRODUCT BUTTON */
-.page button.main { margin-top: 15px; width: 100%; padding: 12px; border-radius: 25px; border: none; background: #6c7cff; color: white; cursor: pointer; transition: opacity 0.4s, transform 0.4s; }
-.page button.main.added { opacity: 0.6; transform: scale(1.05); }
-
-/* CART */
-.cart { 
-  position: fixed; right: -350px; top: 0; width: 300px; height: 100%; background: #1b1f3b; padding: 20px; 
-  transition: right 0.4s; z-index: 1000; /* above product page */
-}
-.cart.open { right: 0; }
-.cart-item { font-size: 0.9rem; margin-bottom: 8px; }
-.total { margin-top: 10px; font-weight: bold; }
-.cart button.checkout { width: 100%; margin-top: 10px; padding: 10px; border-radius: 20px; border: none; background: #6c7cff; color: white; cursor: pointer; }
-
-/* CHECKOUT POPUP */
-#checkoutOverlay {
-  display: none;
-  position: fixed; inset: 0;
-  background: rgba(0,0,0,0.5);
-  backdrop-filter: blur(5px);
-  z-index: 1999;
-}
-#checkoutPopup {
-  display: none;
-  position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);
-  background: #1b1f3b; color: white; padding: 20px; border-radius: 15px;
-  width: 90%; max-width: 400px; z-index: 2000;
-}
-#checkoutPopup input { width: 100%; padding: 10px; margin-top: 10px; text-align: center; font-weight: bold; border-radius: 10px; border: none; margin-bottom: 10px; }
-
-footer { text-align: center; padding: 20px; opacity: 0.5; }
-</style>
+    <meta charset="UTF-8">
+    <title>Lua Loadstring Generator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div id="loader"><div class="spinner"></div></div>
+<h1>Lua Protected Loadstring Generator</h1>
 
-<header>
-  <h1>Southern 3D Prints</h1>
-  <div class="cart-icon" onclick="toggleCart()">🛒
-    <span class="cart-count" id="cartCount">0</span>
-  </div>
-</header>
+<textarea id="luaInput" placeholder="Paste your Lua code here..."></textarea>
 
-<div class="search-box">
-  <input id="search" placeholder="Search products...">
-</div>
+<br>
 
-<div class="store" id="store"></div>
+<button onclick="generateLoadstring()">Generate Protected Loadstring</button>
 
-<footer>© 2025 Southern 3D Prints</footer>
+<h2>Generated Loadstring</h2>
 
-<!-- PRODUCT PAGE -->
-<div class="page" id="productPage">
-  <div class="back" onclick="closePage()">← Back</div>
-  <div class="page-content">
-    <div class="gallery">
-      <img id="galleryImage">
-      <div class="gallery-controls">
-        <button onclick="prevImage()">◀</button>
-        <button onclick="nextImage()">▶</button>
-      </div>
-      <div class="dots" id="dots"></div>
-    </div>
-    <h2 id="pageTitle"></h2>
-    <p id="pageDesc"></p>
-    <p class="price" id="pagePrice"></p>
-    <button class="main" id="pageAddBtn" onclick="addToCartPage()">Add to Cart</button>
-  </div>
-</div>
+<textarea id="output" readonly></textarea>
 
-<!-- CART -->
-<div class="cart" id="cart">
-  <div class="back" onclick="toggleCart()">← Back</div>
-  <h2>Your Cart</h2>
-  <div id="cartItems"></div>
-  <div class="total" id="cartTotal"></div>
-  <button class="checkout" onclick="checkout()">Checkout</button>
-</div>
-
-<!-- CHECKOUT POPUP -->
-<div id="checkoutOverlay"></div>
-<div id="checkoutPopup">
-  <div class="back" id="closeCheckout">← Close</div>
-  <p>You have been redirected, message the owner with a screenshot of this code to purchase:</p>
-  <input type="text" id="checkoutCode" readonly>
-  <button class="main" id="copyCheckout">Copy Code</button>
-</div>
-
-<script>
-window.onload = () => {
-  loader.style.opacity = "0";
-  setTimeout(() => loader.style.display = "none", 1000);
-};
-
-const products = [
-  { name: "F.R.I.E.N.D.S Keychain", price: 5, desc: "F.R.I.E.N.D.S Keychain is a GREAT pick for superfans!", images: ["https://cdn.thingiverse.com/renders/0f/76/85/e0/6b/e9d323d32f1c2ff34302aaa6c82a4c9f_display_large.jpg","https://cdn.thingiverse.com/renders/10/fe/4a/33/7b/44f357e2061f8efda5c32bfcb0889571_display_large.jpg"] },
-   { name: "Can Opener + Bag Clip", price: 6, desc: "Super useful kitchen gadgets!", images: ["https://cdn.thingiverse.com/assets/30/4e/2b/1e/d9/large_display_under-tab.jpg","https://cdn.thingiverse.com/renders/35/35/a9/96/4e/9346eba6fd2d98a1e73acdd77b012af4_display_large.jpg"] },
-  { name: "Racoon", price: 8, desc: "Cute little racoon, great gift for your kids! NOTE: It does NOT come colored.", images: ["https://cdn.thingiverse.com/assets/16/48/4c/b5/4d/large_display_20251110_083145.jpg","https://cdn.thingiverse.com/assets/75/f1/33/af/10/large_display_20251110_083201.jpg"] }
-];
-
-let cart = [];
-let currentProduct = null;
-let imageIndex = 0;
-
-const storeDiv = document.getElementById("store");
-const cartDiv = document.getElementById("cart");
-const cartItemsDiv = document.getElementById("cartItems");
-const cartTotalDiv = document.getElementById("cartTotal");
-const cartCountSpan = document.getElementById("cartCount");
-const checkoutOverlay = document.getElementById("checkoutOverlay");
-const checkoutPopup = document.getElementById("checkoutPopup");
-const galleryImage = document.getElementById("galleryImage");
-const dots = document.getElementById("dots");
-const pageTitle = document.getElementById("pageTitle");
-const pageDesc = document.getElementById("pageDesc");
-const pagePrice = document.getElementById("pagePrice");
-const pageAddBtn = document.getElementById("pageAddBtn");
-
-products.forEach(p => {
-  const div = document.createElement("div");
-  div.className = "item";
-  div.innerHTML = `
-    <h3>${p.name}</h3>
-    <div class="price">$${p.price}</div>
-    <button class="secondary" onclick='openPage(${JSON.stringify(p)})'>View Item</button>
-    <button onclick='quickAdd(this, ${JSON.stringify(p)})'>Add to Cart</button>
-  `;
-  storeDiv.appendChild(div);
-});
-
-function buildDots() {
-  dots.innerHTML = "";
-  currentProduct.images.forEach((_, i) => {
-    const d = document.createElement("div");
-    d.className = "dot" + (i === imageIndex ? " active" : "");
-    d.onclick = () => { imageIndex = i; updateImage(); };
-    dots.appendChild(d);
-  });
-}
-
-function updateImage() {
-  galleryImage.src = currentProduct.images[imageIndex];
-  buildDots();
-}
-
-function openPage(product) {
-  currentProduct = product;
-  imageIndex = 0;
-  document.getElementById("productPage").style.display = "block";
-  pageTitle.textContent = product.name;
-  pageDesc.textContent = product.desc;
-  pagePrice.textContent = "$" + product.price;
-  updateImage();
-}
-
-function closePage() { document.getElementById("productPage").style.display = "none"; }
-
-function nextImage() { imageIndex = (imageIndex + 1) % currentProduct.images.length; updateImage(); }
-function prevImage() { imageIndex = (imageIndex - 1 + currentProduct.images.length) % currentProduct.images.length; updateImage(); }
-
-function animateAdd(btn) {
-  const original = btn.textContent;
-  btn.textContent = "Added to cart ✓";
-  btn.classList.add("added");
-  setTimeout(() => { btn.textContent = original; btn.classList.remove("added"); }, 3000);
-}
-
-function addToCartPage() { cart.push(currentProduct); updateCart(); animateAdd(pageAddBtn); }
-function quickAdd(btn, product) { cart.push(product); updateCart(); animateAdd(btn); }
-
-function toggleCart() { cartDiv.classList.toggle("open"); }
-
-function updateCart() {
-  cartItemsDiv.innerHTML = "";
-  let total = 0;
-  cart.forEach(i => { total += i.price; cartItemsDiv.innerHTML += `<div class="cart-item">${i.name} - $${i.price}</div>`; });
-  cartTotalDiv.textContent = "Total: $" + total.toFixed(2);
-  cartCountSpan.textContent = cart.length;
-}
-
-// CHECKOUT
-function checkout() {
-  if(cart.length<1){ alert("Add at least one item to checkout!"); return; }
-  window.open("https://www.facebook.com/amanda.lester.39", "_blank");
-  setTimeout(showCheckoutPopup, 2000);
-}
-
-function showCheckoutPopup() {
-  const code = Array.from({length:11}, ()=>"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789".charAt(Math.floor(Math.random()*62))).join("");
-  document.getElementById("checkoutCode").value = code;
-  checkoutOverlay.style.display = "block";
-  checkoutPopup.style.display = "block";
-
-  console.log({time:new Date().toLocaleString(), orderId:code, items:cart.map(p=>p.name)});
-  cart = [];
-  updateCart();
-  toggleCart();
-}
-
-document.getElementById("closeCheckout").onclick = () => { checkoutOverlay.style.display = "none"; checkoutPopup.style.display = "none"; };
-document.getElementById("copyCheckout").onclick = () => { 
-  const input = document.getElementById("checkoutCode");
-  input.select(); input.setSelectionRange(0,99999); document.execCommand("copy"); alert("Code copied!"); 
-};
-
-// SEARCH
-document.getElementById("search").addEventListener("keyup", () => {
-  const v = search.value.toLowerCase();
-  document.querySelectorAll(".item").forEach(i => i.style.display = i.innerText.toLowerCase().includes(v) ? "block" : "none");
-});
-</script>
+<script src="script.js"></script>
 </body>
 </html>
